# VoxLens

./: .env.example  .gitignore  Dockerfile  README.md
src/: index.html  latency.py  narrate.py  pyproject.toml  sarvam.py  server.py
src/backends/: __init__.py  base.py  local.py  nim.py
src/benchmarks/: latency_bench.py
src/latency_logs/: latency.csv  latency.jsonl
